# pp-mid-assignment

./: .gitignore  CMakeLists.txt  README.md  boids.cpp  boids.h  boids_omp.cpp  boids_omp.h  boids_seq.cpp  main.cpp  main_omp.cpp  main_seq.cpp
omp/: boids_omp.cpp  boids_omp.h  main_omp.cpp  spatial_grid.h
omp_aos/: boids_omp_aos.cpp  boids_omp_aos.h  main_omp_aos.cpp
omp_soa/: boids_omp_soa.cpp  boids_omp_soa.h  main_omp_soa.cpp  spatial_grid.h
seq/: boids_seq.cpp  boids_seq.h  main_seq.cpp
